--- a/Thesis/conclusion/conclusion_main.tex
+++ b/Thesis/conclusion/conclusion_main.tex
@@ -1,15 +1,19 @@
-\section{Conclusion}
-
-In conclusion, all major goals has been achieved:
+In summary, all major goals of this thesis has been achieved:
 \begin{enumerate}
-\item A new phantom has been designed and manufactured to capture distortions inside 3T MRI scanner. This has 
-  shown to work from the MR images.
-\item An algorithm was developed to calculated the gradient isocenter of the magnetic field of 3T MRI scanner. 
-  Simulated results as shown that this algorithm worked quite accurate.
-\item Several algorithms were also developed to extract desired geometric information from the CT and MR images.
-\item Finally, an algorithm was developed to calculate the correction parameters based on this new phantom's 
-  feature.
+\item A new phantom has been designed and manufactured which accurately captures the distortions inside MR 
+  images of a 3T MRI scanner
+\item An algorithm was developed to calculate the gradient isocenter of the magnetic field of a 3T MRI scanner. 
+  Simulated results have shown that this algorithm worked quite accurately.
+\item Several algorithms were also developed to extract required geometry information from CT and MR images 
+  for MRI distortion correction.
+\item Finally, an algorithm was developed to calculate the distortion correction parameters 
+  using the phantom features extracted from the CT and MR images.
 \end{enumerate}
 
-Further tests still need to be performed to further test the limitation of the this algorithm, e.g. is there
-any region tends to be corrected better than others.
+In the near future, further tests will be perform to explore the accuracy and limitations of this 
+distortion correction algorithm developed in this thesis. There are other sources of geometric distortions in 
+MRI images that need to be considered, including magnetic susceptibility distortion and chemical shift.
+Lastly, one should compare the performance of the correction algorithm developed in this thesis with that of 
+intrinsic distortion correction algorithms that are included in the scanner software.
+%  Still Need To be performed to further test the limitation of the this algorithm, e.g. is there
+% any region tends to be corrected better than others.
