--- a/Thesis/data_extraction/data_extraction.tex
+++ b/Thesis/data_extraction/data_extraction.tex
@@ -6,14 +6,14 @@ measurement, while others would require us to extract information from various t
 measurements. In this chapter we will discuss how we obtain each measurements and algorithm involved in those
 processes.
 
-\section{Water Tank}
+\section{Measuring Water Tanks Distances Using CT Images}
 \label{ct_tank}
 \input{data_extraction/ct_tank}
 
-\section{MR Tubes}
+\section{Extracting MR Tubes Centers from MR Images}
 \label{tubes}
 \input{data_extraction/mr_tubes}
 
-\section{Water Tank MRI}
+\section{Extracting Water Tank Edges From MR Images}
 \label{mri_tank}
 \input{data_extraction/mri_tank}
