--- a/Thesis/phantom/phantom_design.tex
+++ b/Thesis/phantom/phantom_design.tex
@@ -8,10 +8,10 @@ nonlinearity of the MRI scanner’s magnetic gradient fields by imaging a cubic 
 distortion correction functions based on the distorted appearance its surfaces. Correct mathematical handling
 of the distortion correction function required that the cube was centered about the magnetic isocenter, which
 is defined as the common center of the three magnetic gradient fields and  is not very accurately known.
-New 3Tesla MRI systems have a larger bore, making the previous phantom design impractically small for probing
+New 3-Tesla MRI systems have a larger bore, making the previous phantom design impractically small for probing
 the field nonlinearity in the periphery of the bore, as the phantom cannot be scaled up due to constraints
 related to weight and cost of manufacturing. We are introducing a new phantom design using a different
-approach, which can be built to a larger size, improves accuracy of distortion characterization and reduces
+approach, which can be built to a larger size, improves accuracy of distortion characterization, and reduces
 cost.
 
 \section{Initial Design}
@@ -40,7 +40,7 @@ these designs to allow scanning was prohibitive, requiring a complete redesign.
 \section{New Design}
 
 The phantom is shaped to be as large as possible, while still fitting in the head coil of the scanner, so as
-to achieve the maximum quality of signal and largest distortion. The phantom is an octagonal prism with 205mm
+to achieve the maximum quality of signal and largest distortion. The phantom is an octagonal prism with 205 mm
 between opposite sides.  Each face of the octagonal prism is composed of 8 high precision NMR tubes that are
 5mm in outer diameter and 205 mm in length. These tubes are filled with copper sulfate solution to generate a
 strong signal in an MRI scanner.  The tubes are placed parallel to the magnetic field so they will cause less
@@ -69,31 +69,29 @@ up being almost completely flat.  Every feature was met, and it was also the mos
   \begin{minipage}[b]{1in}
     \centering
     \centerline{\mbox{\includegraphics[width=1in]{phantom/images/tube_sealings/paraffin_and_floable_silicon.eps}}}
-    \centerline{\emph{(a) Paraffin wax at top with floatable silicon at bottom}}
+    \centerline{\emph{(a)}}
   \end{minipage}
   \begin{minipage}[b]{1in}
     \centering
     \centerline{\mbox{\includegraphics[width=1in]{phantom/images/tube_sealings/paraffin.eps}}}
-    \centerline{\emph{(b) Paraffin wax only}}
+    \centerline{\emph{(b)}}
   \end{minipage}
-
   \begin{minipage}[b]{1in}
     \centering
     \centerline{\mbox{\includegraphics[width=1in]{phantom/images/tube_sealings/machinable_wax.eps}}}
-    \centerline{\emph{(c) Machinable wax}}
-  \end{minipage}\medskip
+    \centerline{\emph{(c)}}
+  \end{minipage}
   \begin{minipage}[b]{1in}
     \centering
     \centerline{\mbox{\includegraphics[width=1in]{phantom/images/tube_sealings/water_weld.eps}}}
-    \centerline{\emph{(d) Water weld}}
+    \centerline{\emph{(d)}}
   \end{minipage}
-
   \begin{minipage}[b]{1in}
     \centering
     \centerline{\mbox{\includegraphics[width=1in]{phantom/images/tube_sealings/silicon.eps}}}
-    \centerline{\emph{(e) Silicon}}
+    \centerline{\emph{(e)}}
   \end{minipage}
-
+  \caption{\emph{(a) Paraffin wax at top with floatable silicon at bottom (b) Paraffin wax only (c) Machinable wax (d) Water weld (e) Silicon}}
 \end{figure}
 
 \section{Updated Desgin}
