--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -1,5 +1,13 @@
+@ARTICLE{Wil46,
+  AUTHOR  = {Robert Wilson},
+  TITLE   = {Radiological Use of Fast Protons},
+  JOURNAL = {Radiology}, 
+  YEAR    = {1946},
+  volumn  = {47},
+  pages   = {487-491},
+}
 
- @INPROCEEDINGS{LSS06a,
+@INPROCEEDINGS{LSS06a,
    AUTHOR =       {T.S. Lee and K.E. Schubert and R.W. Schulte},
    TITLE =        {{Gradient Non-Linearity Correction of MR Images for Functional Radiosurgery}},
    BOOKTITLE =    {ICIS-COMSAR '06: Proceedings of the 5th IEEE/ACIS International Conference on Computer and Information Science and 1st IEEE/ACIS International Workshop on Component-Based Software Engineering,Software Architecture and Reuse},
@@ -8,11 +16,11 @@
    month =        {July 10-12},
    address =      {Honolulu, Hawaii, USA},
    isbn =         {0-7695-2613-6},
-  doi =          {http://dx.doi.org/10.1109/ICIS-COMSAR.2006.43},
+   doi =          {http://dx.doi.org/10.1109/ICIS-COMSAR.2006.43},
    publisher =    {IEEE Computer Society},
- }
+}
 
- @INPROCEEDINGS{LSS06b,
+@INPROCEEDINGS{LSS06b,
    AUTHOR =       {T.S. Lee and K.E. Schubert and R.W. Schulte},
    TITLE =        {{Software Development For Correction Of Gradient-Nonlinearity Distortions In MR Images}},
    BOOKTITLE =    {Proceedings of the International Conference on Computer Science and its Applications},
@@ -21,59 +29,108 @@
    pages =        {338 - 344},
    address =      {San Diego},
    publisher =    {US Education Service},
- }
+}
 
-\bibitem{LSS06b}
-T.S. Lee and K.E. Schubert and R.W. Schulte
-\newblock ``{Software Development For Correction Of Gradient-Nonlinearity Distortions In MR Images},''
-\newblock {\em Proceedings of the International Conference on Computer Science and its Applications}, 338-344, 2006
+@INPROCEEDINGS{LSS08a,
+   AUTHOR =       {T.S. Lee and K.E. Schubert and R.W. Schulte},
+   TITLE =        {{Computational Algorithm for Modeling and Correction of Gradient Nonlinearity Distortions in Magnetic Resonance Imaging}},
+   BOOKTITLE =    {Proceeding of the World Conference of Engineering and Computer Science},
+   YEAR =         2008,
+   editor =       {Sio-Iong Ao},
+   pages =        {210 - 215},
+   address =      {San Francisco},
+   publisher =    {Harvard School of Engineering and Applied Sciences, Harvard University, USA},
+}
 
-\bibitem{LSS08a}
-T.S. Lee and K.E. Schubert and R.W. Schulte
-\newblock ``{Computational Algorithm for Modeling and Correction of Gradient Nonlinearity Distortions in Magnetic Resonance Imaging},''
-\newblock {\em Proceeding of the World Conference of Engineering and Computer Science}, Oct, pp. 210-215, 2008
+@INPROCEEDINGS{tlee_iaeng,
+   AUTHOR    = "T.S. Lee and K.E. Schubert and R.W. Schulte",
+   TITLE     = {{Software-Based Algorithm for Modeling and Correction of Gradient Nonlinearity Distortions in Magnetic Resonance Imaging}},
+   BOOKTITLE = {IAENG Transactions on Electrical and Electronics Engineering},
+   YEAR      = {2008},
+   editor    = {Sio-Iong Ao},
+   pages     = {210 - 215},
+   address   = {San Francisco},
+   publisher = {Harvard School of Engineering and Applied Sciences, Harvard University, USA},
+}
 
-% \bibitem{tleeiaeng}
-\bibitem{LSS08b}
-T.S. Lee and K.E. Schubert and R.W. Schulte
-\newblock ``{Software-Based Algorithm for Modeling and Correction of Gradient Nonlinearity Distortions in Magnetic Resonance Imaging},''
-\newblock {\em IAENG Transactions on Electrical and Electronics Engineering}, vol. I, 2008
+@ARTICLE{simple_approach, 
+  AUTHOR  = {S. Langlois and M. Desvignes and J.M. Constans and M. Revenu}, 
+  TITLE   = "{MRI geometric distortion: a simple approach to correcting the effects of non-linear gradient fields}", 
+  JOURNAL = {J. Magn. Reson. Imaging}, 
+  YEAR    = {1999}, 
+  volume  = {9}, 
+  pages   = {821-831}, 
+}
 
+@ARTICLE{mag_susceptibility,
+  AUTHOR  = {J. F. Schenck}, 
+  TITLE   = "{The Role of Magnetic Susceptibility In Magnetic Resonance Imaging: MRI Magnetic Compatibility of the First And Second Kind}", 
+  JOURNAL = {Medical Physics}, 
+  YEAR    = {1996}, 
+  volume  = {23},
+  number  = {6},
+  pages   = {815-850}, 
+}
 
-% \bibitem{simpleapproach}
-\bibitem{Lang99}
-S. Langlois, M. Desvignes, J.M. Constans, and M. Revenu,
-\newblock ``{MRI Geometric Distortion: A Simple Approach to Correcting the Effects of Non-linear Gradient Fields},''
-\newblock {\em J. Magn. Reson. Imaging}, vol. 9, pp. 821-831, 1999.
+@INPROCEEDINGS{isocentericsc,
+  AUTHOR     = {R. Cai, K. Schubert, R. Schulte},
+  TITLE      = {{Computational Algorithm for Estimating the Gradient Isocenter of an MRI Scanner}},
+  BOOKTITLE  = {Proceedings of the International Conference on Scientific Computing},
+  YEAR       = {2012},
+  isbn       = {1-60132-207-0},
+  editor     = {Hamid R. Arabnia and William Spataro and Lou D'Alotto and James F. Nystrom and Ashu M. G. Solo and George A. Gravvanis},
+  pages     = {34 - 38},
+  address   = {Las Vegas, Nevada, USA},
+  publisher = {CSREA Press},
+}
 
-\bibitem{magsusceptibility}
-J. F. Schenck,
-\newblock ``{The Role of Magnetic Susceptibility In Magnetic Resonance Imaging: MRI Magnetic Compatibility of the First And Second Kind},''
-\newblock {\em Medical Physics}, vol. 23, iss 6, 1996, pp. 815–850.
+@ARTICLE{Kond99,
+  AUTHOR  = {D. Kondziolka}, 
+  TITLE   = "{Functional radiosurgery}", 
+  JOURNAL = {Neurosurgery}, 
+  YEAR    = {1999}, 
+  volume  = {44}, 
+  pages   = {12-20}, 
+}
 
-\bibitem{isocentericsc}
-R. Cai, K. Schubert, R. Schulte,
-\newblock ``{Computational Algorithm for Estimating the Gradient Isocenter of an MRI Scanner},''
-\newblock {\em Proceedings of the International Conference on Scientific Computing}, 2012, accepted for publication
+@ARTICLE{Dor05, 
+  AUTHOR  = {S.J. Doran and L. Charles-Edwards and S.A. Reinsberg and M.O. Leach MO}, 
+  TITLE   = "{A complete distortion correction for MR images: I. Gradient warp correction}", 
+  JOURNAL = {Phys. Med. Biol.}, 
+  YEAR    = {2005}, 
+  volume  = {50}, 
+  pages   = {1343-1361},
+}
 
-\bibitem{Kond99}
-D. Kondziolka
-\newblock ``{Functional Radiosurgery},''
-\newblock {\em Neurosurgery}, vol. 44, pp. 12-20, 1999
+@ARTICLE{Wang04a, 
+  AUTHOR  = {D. Wang and W. Strugnell and G. Cowin and D.M. Doddrell and R. Slaughter}, 
+  TITLE   = "{Geometric distortion in clinical MRI systems Part I: evaluation using a 3D phantom}", 
+  JOURNAL = {Journal of Magnetic Resonance Imaging}, 
+  YEAR    = {2004}, 
+  volume  = {22}, 
+  pages   = {1211-1221},
+}
 
-\bibitem{Dor05}
-S.J. Doran and L. Charles-Edwards and S.A. Reinsberg and M.O. Leach
-\newblock ``{A Complete Distortion Correction for MR Images: I. Gradient Warp Correction},''
-\newblock {\em Phys. Med. Biol.}, vol. 50, pp. 1243-1361, 2005
+@ARTICLE{Wang04b, 
+  AUTHOR  = {D. Wang and W. Strugnell and G. Cowin and D.M. Doddrell and R. Slaughter},
+  TITLE   = "{Geometric distortion in clinical MRI systems Part II: correction using a 3D phantom}",
+  JOURNAL = {J. Magn. Reson. Imaging},
+  YEAR    = {2004},
+  volume  = {22},
+  pages   = {1223-1232},
+}
 
-\bibitem{Wang04a}
-D. Wang and W. Strugnell and G. Cowin and D.M. Doddrell and R. Slaughter
-\newblock ``{Geometric Distortion in Clinical MRI Systems Part I: Evaluation Using a 3D Phantom},''
-\newblock {\em J. Magn. Reson. Imaging}, vol. 22, pp. 1211--1221, 2004
+@MASTERSTHESIS{tom_thesis,
+  AUTHOR = {T.S. Lee},
+  TITLE  = "{Software-Based Gradient Nonlinearity Distortion Correction}",
+  SCHOOL = {California State University San Bernardino},
+  YEAR   = {2006}, 
+  MONTH  = {December},
+}
 
-\bibitem{Wang04b}
-D. Wang and W. Strugnell and G. Cowin and D.M. Doddrell and R. Slaughter
-\newblock ``{Geometric Distortion in Clinical MRI Systems Part II: Correction Using a 3D Phantom},''
-\newblock {\em J. Magn. Reson. Imaging}, vol. 22, pp. 1223--1232, 2004
-
-\end{thebibliography}
+@PHDTHESIS{sumanaweera_thesis,
+  AUTHOR = {T. S. Sumanaweera},
+  TITLE  = {Segmentation and distortion correction in medical imaging},
+  SCHOOL = {Stanford University}, 
+  YEAR   = {1992},
+}
