--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -86,12 +86,12 @@
 \label{data_extraction}
 \input{data_extraction/data_extraction}
 
-\Chapter{Parameters Calculation}
+\Chapter{Distortion Correction Parameters Calculation}
 \label{parameters_calculation}
 \input{parameters/parameters_main}
 
 % \Chapter{Verification}
-\Chapter{Summery and Conclusion}
+\Chapter{Summary and Conclusion}
 \label{conclusion}
 \input{conclusion/conclusion_main}
 
