--- a/Thesis/data_extraction/ct_tank.tex
+++ b/Thesis/data_extraction/ct_tank.tex
@@ -1,7 +1,7 @@
 
 \subsection{CT Scan overview, target surfaces}
-Due to the limitation of manufacture equipments, water tank at each end can only be guaranteed that their
-surfaces are parallel \footnote{what's the error?} to each other, their accurate distances betweeen each other
+Due to the limitation of manufacture's equipments, water tank at each end can only be guaranteed that their
+surfaces are parallel \footnote{what's the error?} to each other, their accurate distances between each other
 are unknown. We decided to perform a CT scan\footnote{what's the CT's error} on the phantom, then collect each
 surfaces' data points through coronal view CT images. With enough data points on each surface, we should be
 able to have a good estimation of the distances with between each pair of surfaces. \footnote{brief outline of full algorithm}
@@ -108,7 +108,7 @@ Since all objects we are looking for has a very uniform and distinct shape, we c
 regions each contains one object. In our case, the choice is very obvious. The objects we are looking for are
 four straight lines at fixed location and parallel to each other. For images that contain those objects, they
 should have them at almost exactly the same location with possibility of a few pixels offset due to potential
-tiltness of the phantom during scan. If we choose a slice in the middle of the series, that should give us a
+tilt of the phantom during scan. If we choose a slice in the middle of the series, that should give us a
 relatively smaller overall error margin both above and below the surface location on that particular slice
 comparing to picking a slice at the beginning or at the end of the series which would give a relatively larger 
 error on either above or below the surface location. Also the slice in the middle of series tends to have better 
@@ -123,7 +123,7 @@ In figure \ref{fig:histograms_mid_coronal}(c), a zoomed in picture of the region
 and phantom tank distribution, we can see that two distributions' tails overlaps with each other. From the fact 
 that the number of pixels in this overlap region is quite small and that this region is between two 
 distributions, we can determine that most of them should be the pixels on the boundary between water and tank.
-So, according to ranges of two distributinos as we can observer from the diagram, the range of difference
+So, according to ranges of two distributions as we can observer from the diagram, the range of difference
 between tank signal and water signal should be somewhere between 40 to 300. However, since the difference we are
 looking for is on the boundary of water and phantom tank, signals in those regions should tend to be close 
 to each other. Therefore we should expect the to see spikes in gradient to be around $\pm40$. In figure
@@ -135,7 +135,7 @@ water and phantom tank.
 With one pixel on each locations of the water and phantom tank boundaries are identified, 
 we can also narrow down the 
 location of each surface by specifying the surfaces are within the $\pm5$ rows of the row coordinate of each
-identified pixels. The $\pm5$ rows should give enough room for any horizontal or vertical tiltness.
+identified pixels. The $\pm5$ rows should give enough room for any horizontal or vertical tilts.
 
 \begin{figure}[htb]
   \begin{minipage}[b]{1.8in}
@@ -156,7 +156,7 @@ identified pixels. The $\pm5$ rows should give enough room for any horizontal or
     \centerline{\emph{(c)}}
   \end{minipage}
 
-  \caption{\emph{Histograms of middle column of middle slice of a coronal series: (a) mid slice intensity histogram (b) Mared overlap region (c) mid slice surface locations}} 
+  \caption{\emph{Histograms of middle column of middle slice of a coronal series: (a) mid slice intensity histogram (b) Marked overlap region (c) mid slice surface locations}} 
   \label{fig:histograms_mid_coronal}
 \end{figure}
 
@@ -208,8 +208,8 @@ region as well as the gradient for the intensity graph as shown in figure
 
 Upper pair of arrows in figure \ref{fig:coronal_270_boundary_histogram} indicates where the inside edges of
 the phantom tanks are, and the lower pair of arrows indicates how do those edges shows up in its gradient graph.
-The two small edges are identifiable with properties of value bewteen 200 and 1000. We can identify them with
-this property for most of the sliceds. The transition from phantom tank to water become smoother on the slices
+The two small edges are identifiable with properties of value between 200 and 1000. We can identify them with
+this property for most of the slices. The transition from phantom tank to water become smoother on the slices
 more toward anterior or posterior in coronal view. 
 
 There are couple of issues with this approach.
@@ -237,7 +237,7 @@ There are couple of issues with this approach.
     \centerline{\mbox{\includegraphics[width=2.75in]{data_extraction/images/sample/20121017_125/Coronal/Superior_outside/extra_edge_histogram.eps}}}
     \centerline{\emph{(b)}}
   \end{minipage}
-  \caption{\emph{Superior outside surface artifacts: (a) Extra edge caused by tube section (b) Histgram for superior outside surface of the same image}}
+  \caption{\emph{Superior outside surface artifacts: (a) Extra edge caused by tube section (b) Histogram for superior outside surface of the same image}}
   \label{fig:superior_outside_artifacts}
 \end{figure}
 
@@ -275,7 +275,7 @@ pattern. To remove the noisy edges that are unattached to the target edges, we d
     \end{enumerate}
 \end{enumerate}
 
-After follwing above steps, the resulting image will look like something like figure 
+After following above steps, the resulting image will look like something like figure 
 \ref{fig:coronal_270_intermediate_results} (c).
 
 At this stage, we will apply the boundary limit to this newly filtered edge, removing all the pixels beyond
@@ -285,7 +285,7 @@ out as shown in figure \ref{fig:coronal_270_intermediate_results} (d).
 To filter these sticking edges out, we do the following steps:
 
 \begin{enumerate}
-  \item Extract 2d coordinate informate of every edge pixels, and fit them to a straight line, since we know
+  \item Extract 2d coordinate information of every edge pixels, and fit them to a straight line, since we know
     our target edge is a straight line. We can setup the equation as:
     \begin{eqnarray}
       \begin{bmatrix}
@@ -362,7 +362,7 @@ ax + by + cz + d & = & 0 \label{eq:plane}
 \end{eqnarray}
 
 With somewhere between 50,000~70,000 date points for each surfaces, it's the best to use least square ($Ax=b$) to 
-esitmate each surfaces' equation paramters. Considering the following fact:
+estimate each surfaces' equation parameters. Considering the following fact:
 \begin{enumerate}
   \item Least square assumes that there is error in measurement but not observation, so it will only try to
     minimize error in A not b.
@@ -393,7 +393,7 @@ d/b
 \end{bmatrix}
 \end{eqnarray}
 
-With this setup, our estimated paramters for each planes are:
+With this setup, our estimated parameters for each planes are:
 
 \begin{tabular}{| l || r | r | r | r |}
             \hline
@@ -472,7 +472,7 @@ Reconstructed surfaces can be see below:
 \end{figure}
 
 Notice that in the YZ view in figure \ref{fig:ct_tank_surface_reconstruction_yz}(a) (b) (c), 
-all four surfaces are tilted. This is consistant with what we observed on saggital reconstruction 
+all four surfaces are tilted. This is consistent with what we observed on sagittal reconstruction 
 of this image set. 
 
 % \subsection{Estimating Surfaces Distances}
