--- a/Thesis/data_extraction/mri_tank.tex
+++ b/Thesis/data_extraction/mri_tank.tex
@@ -1,14 +1,14 @@
 
 \subsection{Introduction}
 Naturally due to the similarity of MR image and CT images, one can imagine that we shall reuse the algorithm
-we used to estimate water tank surfaces in CT images in MR images. However there are following challanges:
+we used to estimate water tank surfaces in CT images in MR images. However there are following challenges:
 \begin{enumerate}
-  \item MR images' quality is not as good as CT images. Espeically the water tank appeared at lower portion
+  \item MR images' quality is not as good as CT images. Especially the water tank appeared at lower portion
     of images. That portion of the phantom is not completely inside the head coil, so the signals from that
     portion of the phantom contains a lot of noises. With that amount of noises, algorithm we used in CT 
     images tends to get incorrect results. % NOTES: Elaborate or add examples 
   \item Unlike CT images, which has no distortion in the images, MR images are distorted. Tank surfaces
-    in MR images have curvature. So when processing the curvatured noisy edge, we can't really use straight
+    in MR images have curvature. So when processing the curvatures noisy edge, we can't really use straight
     line anymore, there has to be another reliable way to help us trace the broken, noisy curved edges.
   \item Because CT images are not distorted, missing some data points at the edges is not that important.
     With most data we collected, we can still construct a pretty accurate surfaces. However, since MR images
@@ -16,7 +16,7 @@ we used to estimate water tank surfaces in CT images in MR images. However there
     about the distortion model.
 \end{enumerate}
 
-Once apprach is to use 
+Once approach is to use 
 
 Different cases:
 \begin{itemize}
@@ -34,13 +34,13 @@ horizontal boundaries for surfaces:
 \item First we need to start from the middle to get an accurate middle slice's left and right boundary. To
   do this we will average middle slice and it's previous and next images to get rid of some of noise signals 
   as well as enhance the real data signals. 
-\item We will use both coronal and saggital set to extract surfaces
+\item We will use both coronal and sagittal set to extract surfaces
 \item Bottom tank's boundaries could just use the upper tank's
 \item Only the exterior inside surface will use canny for edges, every other surface will use column wised
   data analysis. 
   All surfaces will use the same left and right boundaries derived from exterior inside surface.
   Column wised pixel analysis should be able distinguish padding region and columns that might be outside
   left or right boundaries.
-\item Averging three slices work well for most of the slices. Experiments have shown that 60\% mid slices 
+\item Averaging three slices work well for most of the slices. Experiments have shown that 60\% mid slices 
   is a good cut off point
 \end{enumerate}
